--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ html {
 
   <!-- Main adjustable image -->
   <div class="container h-100 d-flex justify-content-center align-items-center">
-    <img src="./bannerrs.png" class="img-fluid hero-img" alt="Banner">
+    <img src="html/bannerrs.png" class="img-fluid hero-img" alt="Banner">
   </div>
 
   <!-- Hero Text -->
@@ -223,7 +223,7 @@ html {
 
           <div class="card product-card">
             <span class="badge bg-danger sale-badge">9% OFF</span>
-            <img src="./premium.jpg" class="card-img-top">
+            <img src="html/premium.jpg" class="card-img-top">
             <div class="card-body">
               <h6 class="fw-bold">Wireless Headphones</h6>
               <p class="text-muted">$199 <del>$249</del></p>
@@ -232,7 +232,7 @@ html {
 
           <div class="card product-card">
             <span class="badge bg-danger sale-badge">12% OFF</span>
-            <img src="./iphone.jpg" class="card-img-top">
+            <img src="html/iphone.jpg" class="card-img-top">
             <div class="card-body">
               <h6 class="fw-bold">iPhone 17 Pro Max</h6>
               <p class="text-muted">$1399 <del>$1499</del></p>
@@ -241,7 +241,7 @@ html {
 
           <div class="card product-card">
             <span class="badge bg-danger sale-badge">8% OFF</span>
-            <img src="./dell.webp" class="card-img-top">
+            <img src="html/dell.webp" class="card-img-top">
             <div class="card-body">
               <h6 class="fw-bold">Dell Laptop</h6>
               <p class="text-muted">$899 <del>$999</del></p>
@@ -257,7 +257,7 @@ html {
 
           <div class="card product-card">
             <span class="badge bg-danger sale-badge">10% OFF</span>
-            <img src="./honer.jpg" class="card-img-top">
+            <img src="html/honer.jpg" class="card-img-top">
             <div class="card-body">
               <h6 class="fw-bold">Honor Smartphone</h6>
               <p class="text-muted">$499 <del>$549</del></p>
@@ -266,7 +266,7 @@ html {
 
           <div class="card product-card">
             <span class="badge bg-danger sale-badge">15% OFF</span>
-            <img src="./electricstove.jpg" class="card-img-top">
+            <img src="html/electricstove.jpg" class="card-img-top">
             <div class="card-body">
               <h6 class="fw-bold">Electric Stove</h6>
               <p class="text-muted">$199 <del>$249</del></p>
@@ -275,7 +275,7 @@ html {
 
           <div class="card product-card">
             <span class="badge bg-danger sale-badge">20% OFF</span>
-            <img src="./ehite tshirt.jpg" class="card-img-top">
+            <img src="html/ehite tshirt.jpg" class="card-img-top">
             <div class="card-body">
               <h6 class="fw-bold">Designer Cotton T-Shirt</h6>
               <p class="text-muted">$29 <del>$35</del></p>
@@ -312,7 +312,7 @@ html {
     <!-- PRODUCT 1 -->
     <div class="col product electronics">
       <div class="card shadow-sm h-100">
-        <img src="./premium.jpg" class="card-img-top" alt="Premium Wireless Headphones">
+        <img src="html/premium.jpg" class="card-img-top" alt="Premium Wireless Headphones">
         <div class="card-body">
           <h6 class="fw-bold">Premium Wireless Headphones</h6>
           <p class="text-muted">$199 <del>$249</del></p>
@@ -324,7 +324,7 @@ html {
     <!-- PRODUCT 2 -->
     <div class="col product electronics">
       <div class="card shadow-sm h-100">
-        <img src="./iphone.jpg" class="card-img-top" alt="iPhone 17 Pro Max">
+        <img src="html/iphone.jpg" class="card-img-top" alt="iPhone 17 Pro Max">
         <div class="card-body">
           <h6 class="fw-bold">iPhone 17 Pro Max</h6>
           <p class="text-muted">$1399 <del>$1499</del></p>
@@ -336,7 +336,7 @@ html {
     <!-- PRODUCT 3 -->
     <div class="col product electronics">
       <div class="card shadow-sm h-100">
-        <img src="./dell.webp" class="card-img-top" alt="Dell Laptop">
+        <img src="html/dell.webp" class="card-img-top" alt="Dell Laptop">
         <div class="card-body">
           <h6 class="fw-bold">Dell Laptop</h6>
           <p class="text-muted">$899 <del>$999</del></p>
@@ -348,7 +348,7 @@ html {
     <!-- PRODUCT 4 -->
     <div class="col product electronics">
       <div class="card shadow-sm h-100">
-        <img src="./honer.jpg" class="card-img-top" alt="Honor Smartphone">
+        <img src="html/honer.jpg" class="card-img-top" alt="Honor Smartphone">
         <div class="card-body">
           <h6 class="fw-bold">Honor Smartphone</h6>
           <p class="text-muted">$499 <del>$549</del></p>
@@ -360,7 +360,7 @@ html {
     <!-- PRODUCT 5 -->
     <div class="col product electronics">
       <div class="card shadow-sm h-100">
-        <img src="./electricstove.jpg" class="card-img-top" alt="Electric Stove">
+        <img src="html/electricstove.jpg" class="card-img-top" alt="Electric Stove">
         <div class="card-body">
           <h6 class="fw-bold">Electric Stove</h6>
           <p class="text-muted">$199 <del>$249</del></p>
@@ -377,7 +377,7 @@ html {
     <!-- PRODUCT 6 -->
     <div class="col product clothing">
       <div class="card shadow-sm h-100">
-        <img src="./ehite tshirt.jpg" class="card-img-top" alt="Designer Cotton T-Shirt">
+        <img src="html/ehite tshirt.jpg" class="card-img-top" alt="Designer Cotton T-Shirt">
         <div class="card-body">
           <h6 class="fw-bold">Designer Cotton T-Shirt</h6>
           <p class="text-muted">$29</p>
@@ -388,7 +388,7 @@ html {
 
     <div class="col product clothing">
       <div class="card shadow-sm h-100">
-        <img src="./shoes.jpg" class="card-img-top" alt="Designer Cotton T-Shirt">
+        <img src="html/shoes.jpg" class="card-img-top" alt="Designer Cotton T-Shirt">
         <div class="card-body">
           <h6 class="fw-bold">shoes</h6>
           <p class="text-muted">$37</p>
@@ -400,7 +400,7 @@ html {
 
     <div class="col product clothing">
       <div class="card shadow-sm h-100">
-        <img src="./onepice.webp" class="card-img-top" alt="Designer Cotton T-Shirt">
+        <img src="html/onepice.webp" class="card-img-top" alt="Designer Cotton T-Shirt">
         <div class="card-body">
           <h6 class="fw-bold">Onepice</h6>
           <p class="text-muted">$97</p>
@@ -412,7 +412,7 @@ html {
 
     <div class="col product clothing">
       <div class="card shadow-sm h-100">
-        <img src="./scarf.jpg" class="card-img-top" alt="Designer Cotton T-Shirt">
+        <img src="html/scarf.jpg" class="card-img-top" alt="Designer Cotton T-Shirt">
         <div class="card-body">
           <h6 class="fw-bold">Wooolen</h6>
           <p class="text-muted">$2</p>
@@ -432,7 +432,7 @@ html {
     <!-- PRODUCT 7 -->
     <div class="col product books">
       <div class="card shadow-sm h-100">
-        <img src="./java script guid.jpg" class="card-img-top" alt="JavaScript Guide Book">
+        <img src="html/java script guid.jpg" class="card-img-top" alt="JavaScript Guide Book">
         <div class="card-body">
           <h6 class="fw-bold">JavaScript Guide Book</h6>
           <p class="text-muted">$45</p>
@@ -444,7 +444,7 @@ html {
 
     <div class="col product books">
       <div class="card shadow-sm h-100">
-        <img src="./atomichabit.jpg" class="card-img-top" alt="JavaScript Guide Book">
+        <img src="html/atomichabit.jpg" class="card-img-top" alt="JavaScript Guide Book">
         <div class="card-body">
           <h6 class="fw-bold">atomichabit</h6>
           <p class="text-muted">$5</p>
@@ -456,7 +456,7 @@ html {
 
     <div class="col product books">
       <div class="card shadow-sm h-100">
-        <img src="./books1.jpg" class="card-img-top" alt="JavaScript Guide Book">
+        <img src="html/books1.jpg" class="card-img-top" alt="JavaScript Guide Book">
         <div class="card-body">
           <h6 class="fw-bold">friends</h6>
           <p class="text-muted">$25</p>
@@ -467,7 +467,7 @@ html {
 
     <div class="col product books">
       <div class="card shadow-sm h-100">
-        <img src="./book.jpg" class="card-img-top" alt="JavaScript Guide Book">
+        <img src="html/book.jpg" class="card-img-top" alt="JavaScript Guide Book">
         <div class="card-body">
           <h6 class="fw-bold">Book</h6>
           <p class="text-muted">$45</p>
@@ -478,7 +478,7 @@ html {
 
     <div class="col product books">
       <div class="card shadow-sm h-100">
-        <img src="./books.jpg" class="card-img-top" alt="JavaScript Guide Book">
+        <img src="html/books.jpg" class="card-img-top" alt="JavaScript Guide Book">
         <div class="card-body">
           <h6 class="fw-bold">bk</h6>
           <p class="text-muted">$45</p>
@@ -498,7 +498,7 @@ html {
     <!-- PRODUCT 8 -->
     <div class="col product electronics">
       <div class="card shadow-sm h-100">
-        <img src="./skincare.jpg" class="card-img-top" alt="High-End Skincare Device">
+        <img src="html/skincare.jpg" class="card-img-top" alt="High-End Skincare Device">
         <div class="card-body">
           <h6 class="fw-bold">High-End Skincare Device</h6>
           <p class="text-muted">$1200 <del>$1500</del></p>
